--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,mdx}": "eslint --fix"
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
-    "@typescript-eslint/parser": "^7.0.0",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
     "next": "14.2.1",
@@ -25,15 +28,21 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.0.1",
     "eslint-config-next": "14.2.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "*",
     "typescript-eslint": "^7.7.0"
